# camera-edge-detection

./: .gitignore  README.md  gradle.properties  opencv  roadmap.md  rules.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edge_processor.cpp  edge_processor.h  native-lib.cpp
app/src/main/java/com/edgedetection/: EdgeProcessor.kt  EdgeRenderer.kt  FrameServer.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle
web/: index.html  main.js  package-lock.json  package.json  style.css  tsconfig.json
web/src/: main.ts
